Finish Dad's website

--- a/index.html
+++ b/index.html
@@ -53,103 +53,155 @@ layout: default
 <!-- End Hero -->
 
 <!-- Start About -->
-<div id="consulta" class="about">
+<div id="servicios" class="about">
     <div class="container-fluid">
-        <h2 class="section-title">Consulta</h2>
+        <h2 class="section-title">Servicios</h2>
 
         <div class="row">
             <div class="col-sm-6">
-                <p>Cuando consultar</p>
-
-                <div class="media">
-                    <div class="media-left">
-                        <div class="boxed-icon">
-                            <svg class="icon icon-heart"><use xlink:href="#icon-heart"></use></svg>
-                        </div>
-                    </div>
-                    <div class="media-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam explicabo unde doloremque quo, fugit, nisi.</p>
-                    </div>
-                </div>
-
-                <div class="media">
-                    <div class="media-left">
-                        <div class="boxed-icon">
-                            <svg class="icon icon-medkit"><use xlink:href="#icon-medkit"></use></svg>
-                        </div>
-                    </div>
-                    <div class="media-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam explicabo unde doloremque quo, fugit, nisi.</p>
-                    </div>
-                </div>
-
-                <div class="media">
-                    <div class="media-left">
-                        <div class="boxed-icon">
-                            <svg class="icon icon-star"><use xlink:href="#icon-star"></use></svg>
-                        </div>
-                    </div>
-                    <div class="media-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam explicabo unde doloremque quo, fugit, nisi.</p>
-                    </div>
-                </div>
-
-                <div class="media">
-                    <div class="media-left">
-                        <div class="boxed-icon">
-                            <svg class="icon icon-heart"><use xlink:href="#icon-heart"></use></svg>
-                        </div>
-                    </div>
-                    <div class="media-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam explicabo unde doloremque quo, fugit, nisi.</p>
-                    </div>
-                </div>
-
-                <div class="media">
-                    <div class="media-left">
-                        <div class="boxed-icon">
-                            <svg class="icon icon-medkit"><use xlink:href="#icon-medkit"></use></svg>
-                        </div>
-                    </div>
-                    <div class="media-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam explicabo unde doloremque quo, fugit, nisi.</p>
-                    </div>
-                </div>
-
-                <div class="media">
-                    <div class="media-left">
-                        <div class="boxed-icon">
-                            <svg class="icon icon-star"><use xlink:href="#icon-star"></use></svg>
-                        </div>
-                    </div>
-                    <div class="media-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam explicabo unde doloremque quo, fugit, nisi.</p>
-                    </div>
-                </div>
-
-                <div class="media">
-                    <div class="media-left">
-                        <div class="boxed-icon">
-                            <svg class="icon icon-star"><use xlink:href="#icon-star"></use></svg>
-                        </div>
-                    </div>
-                    <div class="media-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam explicabo unde doloremque quo, fugit, nisi.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <img src="img/ultrasonido.jpg" alt="...">
-            </div>
+              <div class="media">
+                  <div class="media-left">
+                      <div class="boxed-icon">
+                          <svg class="icon icon-user-md"><use xlink:href="#icon-user-md"></use></svg>
+                      </div>
+                  </div>
+                  <div class="media-body">
+                      <p>Consulta y atencíon prenatal</p>
+                  </div>
+              </div>
+              <div class="media">
+                  <div class="media-left">
+                      <div class="boxed-icon">
+                          <svg class="icon icon-heart"><use xlink:href="#icon-heart"></use></svg>
+                      </div>
+                  </div>
+                  <div class="media-body">
+                      <p>Control del embarazo de bajo y alto riesgo</p>
+                  </div>
+              </div>
+              <div class="media">
+                  <div class="media-left">
+                      <div class="boxed-icon">
+                          <svg class="icon icon-medkit"><use xlink:href="#icon-medkit"></use></svg>
+                      </div>
+                  </div>
+                  <div class="media-body">
+                      <p>Prueba de Papanicolau (Thin Prep, Citología líquida)</p>
+                  </div>
+              </div>
+              <div class="media">
+                  <div class="media-left">
+                      <div class="boxed-icon">
+                          <svg class="icon icon-user-md"><use xlink:href="#icon-user-md"></use></svg>
+                      </div>
+                  </div>
+                  <div class="media-body">
+                      <p>Colposcopia del tracto genital inferior (vulva, vagina, cervix uterino)</p>
+                  </div>
+              </div>
+              <div class="media">
+                  <div class="media-left">
+                      <div class="boxed-icon">
+                          <svg class="icon icon-heart"><use xlink:href="#icon-heart"></use></svg>
+                      </div>
+                  </div>
+                  <div class="media-body">
+                      <p>Evaluacíon y tratamiento de la pareja con infertilidad</p>
+                  </div>
+              </div>
+              <div class="media">
+                  <div class="media-left">
+                      <div class="boxed-icon">
+                          <svg class="icon icon-medkit"><use xlink:href="#icon-medkit"></use></svg>
+                      </div>
+                  </div>
+                  <div class="media-body">
+                      <p>Consulta ginecológico</p>
+                  </div>
+              </div>
+              <div class="media">
+                  <div class="media-left">
+                      <div class="boxed-icon">
+                          <svg class="icon icon-user-md"><use xlink:href="#icon-user-md"></use></svg>
+                      </div>
+                  </div>
+                  <div class="media-body">
+                      <p>Evaluacíon del cancer ginecológico y enfermedades de la mama.</p>
+                  </div>
+              </div>
+              <div class="media">
+                  <div class="media-left">
+                      <div class="boxed-icon">
+                          <svg class="icon icon-medkit"><use xlink:href="#icon-medkit"></use></svg>
+                      </div>
+                  </div>
+                  <div class="media-body">
+                      <p>Ultrasonido obstétrico y ginecológico</p>
+                  </div>
+              </div>
+              <div class="media">
+                  <div class="media-left">
+                      <div class="boxed-icon">
+                          <svg class="icon icon-user-md"><use xlink:href="#icon-user-md"></use></svg>
+                      </div>
+                  </div>
+                  <div class="media-body">
+                      <p>Biopsia de Cervix y Endometrio</p>
+                  </div>
+              </div>
+              <div class="media">
+                  <div class="media-left">
+                      <div class="boxed-icon">
+                          <svg class="icon icon-heart"><use xlink:href="#icon-heart"></use></svg>
+                      </div>
+                  </div>
+                  <div class="media-body">
+                      <p>Attencíon de parto eutócico y distócico </p>
+                  </div>
+              </div>
+              <div class="media">
+                  <div class="media-left">
+                      <div class="boxed-icon">
+                          <svg class="icon icon-medkit"><use xlink:href="#icon-medkit"></use></svg>
+                      </div>
+                  </div>
+                  <div class="media-body">
+                      <p>Operacíon cesárea</p>
+                  </div>
+              </div>
+              <div class="media">
+                  <div class="media-left">
+                      <div class="boxed-icon">
+                          <svg class="icon icon-user-md"><use xlink:href="#icon-user-md"></use></svg>
+                      </div>
+                  </div>
+                  <div class="media-body">
+                      <p>HTL (Histerectomía total laparascopica)</p>
+                  </div>
+              </div>
+              <div class="media">
+                  <div class="media-left">
+                      <div class="boxed-icon">
+                          <svg class="icon icon-heart"><use xlink:href="#icon-heart"></use></svg>
+                      </div>
+                  </div>
+                  <div class="media-body">
+                      <p>Histerectomía Abdominal y Vaginal</p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6">
+              <img src="img/ultrasonido.jpg" alt="...">
+          </div>
         </div>
     </div>
 </div>
 <!-- End About -->
 
 <!-- Start Treatments -->
-<div id="servicios" class="treatments">
+<div id="ultrasonido" class="treatments">
     <div class="container-fluid">
-        <h2 class="section-title">Servicios</h2>
+        <h2 class="section-title">Ultrasonido</h2>
 
         <div class="row">
             {% for treatment in site.data.treatments %}
